Removed local paths

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -1,19 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demo\n",
+    "This is a rudimentary demo meant to illustrate how to call the functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from glob import glob\n",
     "\n",
     "import rasterio as rst\n",
     "import rastertools as rtools\n",
-    "from pyogrio import read_dataframe, write_dataframe\n",
-    "\n",
-    "wrk_dir = r'D:\\.temp'"
+    "from pyogrio import write_dataframe"
    ]
   },
   {
@@ -30,13 +35,13 @@
    "outputs": [],
    "source": [
     "rtools.s2stack(\n",
-    "    os.path.join(wrk_dir, 'S2B_MSIL2A_20240604T101559_N0510_R065_T32TNT_20240604T130328.SAFE.zip'),\n",
-    "    out_path=os.path.join(wrk_dir, 's2img_10m.tif'), \n",
+    "    'S2B_MSIL2A_20240604T101559_N0510_R065_T32TNT_20240604T130328.SAFE.zip',\n",
+    "    out_path='s2img_10m.tif', \n",
     "    resolution=10\n",
     ")\n",
     "rtools.s2stack(\n",
-    "    os.path.join(wrk_dir, 'S2B_MSIL2A_20240604T101559_N0510_R065_T32TNT_20240604T130328.SAFE.zip'),\n",
-    "    out_path=os.path.join(wrk_dir, 's2img_20m.tif'), \n",
+    "    'S2B_MSIL2A_20240604T101559_N0510_R065_T32TNT_20240604T130328.SAFE.zip',\n",
+    "    out_path='s2img_20m.tif', \n",
     "    resolution=[10, 20]\n",
     ")"
    ]
@@ -54,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with rtools.Raster(os.path.join(wrk_dir, 'inputs', 'raster1.tif')) as src:\n",
+    "with rtools.Raster('raster1.tif') as src:\n",
     "    image = src.read()\n",
     "\n",
     "image.__dict__"
@@ -73,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = rtools.vectorize(os.path.join(wrk_dir, 'binary_vegetation.tif'), nodata=0)\n",
-    "write_dataframe(gdf, os.path.join(wrk_dir, 'binary_vegetation.geojson'))"
+    "gdf = rtools.vectorize('binary_vegetation.tif', nodata=0)\n",
+    "write_dataframe(gdf, 'binary_vegetation.geojson')"
    ]
   },
   {
@@ -83,14 +88,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with rst.open(os.path.join(wrk_dir, 'binary_vegetation.tif')) as src:\n",
+    "with rst.open('binary_vegetation.tif') as src:\n",
     "    img = src.read(1)\n",
     "    nodata = src.nodata\n",
     "    transform = src.transform\n",
     "    crs = src.crs\n",
     "\n",
     "gdf = rtools.vectorize(img, transform=transform, crs=crs, nodata=0)\n",
-    "write_dataframe(gdf, os.path.join(wrk_dir, 'binary_vegetation2.geojson'))"
+    "write_dataframe(gdf, 'binary_vegetation2.geojson')"
    ]
   },
   {
@@ -106,9 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = rtools.resample(os.path.join(wrk_dir, 'rasters', 'raster1.tif'), res=1.2, resampling='bilinear')\n",
+    "img = rtools.resample('raster1.tif', res=1.2, resampling='bilinear')\n",
     "\n",
-    "with rst.open(os.path.join(wrk_dir, 'raster1_resampled.tif'), 'w', **img.attrs) as dst:\n",
+    "with rst.open('raster1_resampled.tif', 'w', **img.attrs) as dst:\n",
     "    dst.write(img)"
    ]
   },
@@ -125,10 +130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filelist = glob(os.path.join(wrk_dir, 'rasters', '*.tif'))\n",
+    "filelist = glob('rasters', '*.tif')\n",
     "img = rtools.merge(filelist)\n",
     "\n",
-    "with rst.open(os.path.join(wrk_dir, 'rasters_merged.tif'), 'w', **img.attrs) as dst:\n",
+    "with rst.open('rasters_merged.tif', 'w', **img.attrs) as dst:\n",
     "    dst.write(img)"
    ]
   },
@@ -145,8 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rasters = glob(os.path.join(wrk_dir, 'rasters', '*.tif'))\n",
-    "shps = glob(os.path.join(wrk_dir, 'shps', '*.shp'))\n",
+    "rasters = glob('*.tif')\n",
+    "shps = glob('*.shp')\n",
     "\n",
     "outfiles = rtools.intersect(rasters+shps)"
    ]
@@ -163,10 +168,10 @@
     "\n",
     "for fp, outfile in zip(rasters+shps, outfiles):\n",
     "    if isinstance(outfile, xr.DataArray):\n",
-    "        with rst.open(os.path.join(wrk_dir, f'{Path(fp).stem}_intersect.tif'), 'w', **outfile.attrs) as dst:\n",
+    "        with rst.open(f'{Path(fp).stem}_intersect.tif', 'w', **outfile.attrs) as dst:\n",
     "            dst.write(outfile)\n",
     "    elif isinstance(outfile, gpd.GeoDataFrame):\n",
-    "        write_dataframe(outfile, os.path.join(wrk_dir, f'{Path(fp).stem}_intersect.geojson'))\n",
+    "        write_dataframe(outfile, f'{Path(fp).stem}_intersect.geojson')\n",
     "    else:\n",
     "        print('How awkward, you messed up in a live demo.')"
    ]
@@ -174,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "urban",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
